Fix java 8 regression